Fixed a spacing issue regarding the headers on every page

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -48,7 +48,7 @@ button {
 
 .container:not(footer .container) {
     max-width: 750px;
-    margin: 0 auto 4rem;
+    margin: 2rem auto 4rem;
     padding: 1rem;
     display: flex;
     flex-direction: column;
